    options. (Pierre)
  . Changed get_magic_quotes_gpc(), get_magic_quotes_runtime to always return
    false and set_magic_quotes_runtime() to raise an E_CORE_ERROR.
- Removed support for "continue" and "break" operators with non-constant
  operands. (Dmitry)
- Removed Freetype 1.x and GD 1.x from GD extension. (Pierre)
- Removed global reflection constants. (Johannes)

- Improved and cleaned CGI code. FastCGI is now always enabled and can not be
  disabled. See sapi/cgi/CHANGES for more details. (Dmitry)
- Improved cURL: (Ilia)
  . Added curl_setopt_array() which allows setting of multiple cURL options.
  . Added CURLINFO_HEADER_OUT constant to facilitate request retrieval.

- Added "jump label" operator (limited "goto"). (Dmitry, Sara)
- Added E_STRICT to E_ALL. (Dmitry)
- Added gmp_nextprime() function. (Tony, patch by ants dot aasma at gmail dot com) 
- Added "allow_url_include" ini option to be able to turn off remote url
  code execution separately from the "allow_url_fopen" setting. (Rasmus)
- Added --rclass and --rextension CLI parameters to reflect internal classes
  and loaded extensions. (Johannes)
- Added optional parameter to http_build_query() to allow specification of 
  string separator. (Ilia)
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurence of needle. (Johannes)
- Added possibility to check in which extension an internal function was
  defined using reflection API. (Johannes)
- Added second optional parameter to stream_context_create() to set params
  during context creation. (Sara)
- Added sys_get_temp_dir() function that returns the default directory for
  temporary files (as requested in bug #35380). (Hartmut)

- Fixed bug #36630 (umask not reset at the end of the request). (Ilia)
- Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)